# Find-ai

./: .env  .gitignore  AGENTS.md
find-ai/: .env.example  .gitignore  README.md  app.json  build-apk.sh  eas.json  package-lock.json  package.json
find-ai-backend/: README.md  db.py  main.py  requirements.txt  seed_course.py
find-ai-backend/auth/: __init__.py  models.py  permissions.py  provider.py  supabase_auth.py
find-ai-backend/config/: concepts.yaml  feeds.yaml
find-ai-backend/core/: enricher.py  mapper.py  registry.py
find-ai-backend/courses/: sample-course.json
find-ai-backend/handlers/: generic_rss.py  google_news.py  moneycontrol.py
find-ai-backend/middleware/: admin_auth.py  auth_gateway.py
find-ai-backend/migrations/: 001_course_tables.sql  002_user_auth_tables.sql  002_users_auth.sql  003_split_progress_tables.sql  004_daily_activity_leaderboard.sql
find-ai-backend/models/: schemas.py
find-ai-backend/routes/: admin.py  courses.py  leaderboard.py  me.py
find-ai/app/: +html.tsx  +not-found.tsx  _layout.tsx  index.tsx  league.tsx  streak.tsx
find-ai/constants/: api.ts  colors.ts  mock-data.ts  spacing.ts  typography.ts
find-ai/lib/: api.ts  (+4 more)
llm-gateway/: .gitignore  README.md  main.py  otel_setup.py  pyproject.toml
llm-gateway/scripts/: llama-gateway.service  llama-restart.sh  llama-server.service  llama-start.sh  llama-status.sh  llama-stop.sh
observability/: .gitignore  README.md
scrapping-service/: .env.example  .gitignore  README.md  main.py  otel_setup.py  pyproject.toml  scraper.py  tab_manager.py  test_toi.py  traffic.py
(+133 files in other folders)
