[project]
name = "llm-gateway"
version = "0.1.0"
description = "OTEL reverse proxy in front of llama.cpp for SigNoz"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.0",
    "uvicorn>=0.51.0",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.43.0",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
    "opentelemetry-instrumentation-httpx>=0.64b0",
]
